--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 
 # Ignore all tempCodeRunnerFile.py files anywhere
 */tempCodeRunnerFile.py
+
+/Quantitative Methods Midterms/tempCodeRunnerFile.py
